fix: vertical scroll issue on mobile

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body
     border-width: 2px;
     background-clip: content-box, padding-box;
     max-width: 100%;
-    max-height: 100%;
+    max-height: 100vh;
     overflow-x: hidden;
     overflow-y: hidden;
 }
@@ -106,7 +106,7 @@ body
   scrollbar-gutter: stable;
   box-sizing: border-box;
   height: 100%;
-  overflow-y: auto;
+  overflow-y: hidden;
   position: relative;
 }
 terminal.terminal-temp {
